Packaging and start/stop scripts mostly done.